Slight code upgrade (#907)
* code upgrade from silly stuff... more upgrades to come

* code upgrade from silly stuff... more upgrades to come